@@ -21,6 +21,8 @@
 
 -ExtractVBS [filename]  Load, export table script and close
 
+-Ini [filename]         Use a custom settings file instead of loading it from the default location
+
 -c1 [customparam] .. -c9 [customparam]  Custom user parameters that can be accessed in the script via GetCustomParam(X)
 
 
